Fixed Jump-Points
Jum

--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ h1 {
 	margin: 0;
 	padding: 10px;
 	font-family: 'Merriweather', serif;
-	font-size: 2.1em;
+	font-size: 1.8em;
 }
 
 header {
@@ -46,6 +46,7 @@ h2 {
 	display: inline-block;
 	width: 100%;
 	font-family: 'Merriweather Sans', sans-serif;
+	font-size: 1.5em;
 }
 
 h3 {
@@ -105,7 +106,7 @@ img {
 	width: 40px;
 	position: absolute;
 	right: 7px;
-	bottom: 20px;
+	bottom: 17px;
 }
 
 .nav-label img {
@@ -113,9 +114,12 @@ img {
 	width: 100%;
 }
 
-li {
-	padding: 1.1em;
+li a {
 	font-family: 'Merriweather Sans', sans-serif;
+}
+
+li {
+	padding: 0.4em;
 }
 
 nav li:hover {
